syntax = "proto3";

option go_package = "./;proto";

package proto;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // 获取test的计数值
  rpc GetTestNum (HelloRequest) returns (TestNumReply) {}

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  bool likeCoding = 2;
  int32  test = 3;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message TestNumReply {
    string  result = 1;
}